[package]
name = "ninja_fighter"
version = "0.1.0"
edition = "2021"
authors = ["Jarten"]
description = "A student project about making a game using Rust"
readme = "README.md"
repository = "https://github.com/Jarten0/ninja_fighter/"
keywords = ["game", "gamedev", "ggez", "bevy-ecs"]
publish = false


[profile]
dev.debug = "full"

[dependencies]
ggez = "0.9.3"
bevy_ecs = "0.12.1"
serde = { version = "1.0.189", features = ["derive"] }
erased-serde = "0.4.0"
serde_json = "1.0.0"
typetag = "0.2.0"
dict = "0.1.5"
mint = "0.5.9"
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
keycode = "0.4.0"
lazy_static = "1.4.0"