
[workspace]
resolver = "2"

members = [
    "game",
    "engine",
    "components",
    "editor", 
    "playground"
]


[profile]
dev.debug = "full"

[workspace.dependencies]
ggez = "0.9.3"
bevy_ecs = { version = "0.13.1", features = ["bevy_reflect"] }
bevy_reflect = "0.13.1"
bevy-trait-query = "0.5.1"
serde = { version = "1.0.189", features = ["derive"] }
erased-serde = "0.4.0"
serde_json = "1.0.0"
typetag = "0.2.0"
dict = "0.1.5"
mint = "0.5.9"
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
keycode = "0.4.0"
lazy_static = "1.4.0"
inquire = "0.6.2"
clap = { version = "4.4.12", features = ["derive"] }
syn = { version = "2.0.48", features = ["parsing", "full"] }
