[package]
name = "components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs.workspace = true
bevy-trait-query.workspace = true
bevy_reflect.workspace = true
engine = {version = "0.1.0", path = "../engine"}
ggez = "0.9.3"
mint.workspace = true 
nalgebra = { version = "0.32.3", features = ["serde-serialize", "mint"] }
serde.workspace = true
erased-serde = "0.4.4"
log = "0.4.21"
egui.workspace = true
serde_json.workspace = true
