[package]
name = "editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs.workspace = true
components = { version = "0.1.0", path = "../components" }
engine = { version = "0.1.0", path = "../engine" }
game = { version = "0.1.0", path = "../game" }
ggez.workspace = true
