[package]
name = "editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy-trait-query.workspace = true
bevy_ecs.workspace = true
bevy_reflect.workspace = true
components = { version = "0.1.0", path = "../components" }
egui = "0.26.2" # uses 0.26.2 since 0.27 has breaking changes that ggegui 0.4.0 hasn't fixed
egui_dock = {version = "0.11.4"} # requires egui 0.26
engine = { version = "0.1.0", path = "../engine" }
game = { version = "0.1.0", path = "../game" }
ggegui = {version = "0.4.0", path = '..\..\ggegui'} # using a custom implementation at the moment. don't mind.
ggez.workspace = true
inquire.workspace = true
log = "0.4.21"
serde_json.workspace = true
