[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
ggez = "0.9.3"
bevy_ecs = "0.12.1"
serde = { version = "1.0.189", features = ["derive"] }
erased-serde = "0.4.0"
serde_json = "1.0.0"
typetag = "0.2.0"
dict = "0.1.5"
mint = "0.5.9"
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
keycode = "0.4.0"
lazy_static = "1.4.0"
enum-iterator = "1.4.1"
strum = "0.25.0"
strum_macros = "0.25.3"
inquire = "0.6.2"
clap = { version = "4.4.12", features = ["derive"] }