[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.9.3"
bevy_ecs = { version = "0.12.1", features = ["bevy_reflect"] }
bevy-trait-query = "0.4.0"
bevy_reflect = { version = "0.12.1", features = ["documentation"] }

serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.0"
erased-serde = "0.4.0"

inquire = "0.6.2"
clap = { version = "4.4.12", features = ["derive"] }

mint = "0.5.9"
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }

keycode = "0.4.0"
enum-iterator = "1.4.1"
once_cell = "1.19.0"

