[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = { version = "0.9.3", features = ["gilrs"] }
bevy_ecs.workspace = true
bevy-trait-query.workspace = true
bevy_reflect.workspace = true

serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.0"
erased-serde = "0.4.0"

inquire = "0.6.2"
clap = { version = "4.4.12", features = ["derive"] }

mint = "0.5.9"
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }

keycode = "0.4.0"
once_cell = "1.19.0"
log = "0.4.21"
libm = "0.2.8"
gilrs = { version = "0.10.6", features = ["serde-serialize"] }

