[package]
name = "game"
# Update version on release
version = "0.1.0"
edition = "2021"
authors = ["Jarten"]
description = "A student project about making a game using Rust"
readme = "README.md"
repository = "https://github.com/Jarten0/ninja_fighter/"
keywords = ["game", "gamedev", "ggez", "bevy-ecs"]
publish = false


[dependencies]
ggez.workspace = true
bevy_ecs.workspace = true
engine = {version = "0.1.0", path = "../engine"}
components = { version = "0.1.0", path = "../components" }
log = "0.4.21"
